# design-and-practice-of-generative-ai-systems-2026

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
week2/: 2_Ollama.ipynb  Prompt.ipynb
week3/: 1_用_Python_實作語意搜尋_教學版.ipynb  2_徒手實作簡化版的_RAG_教學版.ipynb  3_Context Engineering.ipynb  4_HW1.ipynb
week4/: 1_RAG_KnowledgeSample.ipynb  2_Rerank.ipynb  3_HW2.ipynb
week5/: 1_neo4j_graphrag.ipynb
