[project]
name = "design-and-practice-of-generative-ai-systems-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers",
    "openai",
    "scikit-learn",
    "jupyter",
    "pandas",
    "python-dotenv",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.3",
    "flask>=3.1.3",
    "line-bot-sdk>=3.22.0",
    "pyngrok>=7.5.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "neo4j>=6.1.0",
    "groq>=0.37.1",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1.8",
]
